# ematiq-converter

./: .gitignore  README.md  app.py  currency_converter.py  currency_ws_client.py  mock_websocket_server.py  pyproject.toml  test_client.py  test_converter.py
