[tool.poetry]
name = "ematiq"
version = "0.1.0"
description = "The application implements a solution for currency conversion from a server using a WebSocket connection."
authors = ["Karel Cervicek <cervicekkarel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
mypy = "^1.2.0"
pytest-mock = "^3.10.0"
aioresponses = "^0.7.4"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
